--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <org.springframework-version>5.3.19</org.springframework-version>
     <org.aspectj-version>1.9.19</org.aspectj-version>
     <org.slf4j-version>2.0.12</org.slf4j-version>
-    <project.build.soruceEncoding>UTF-8</project.build.soruceEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
     
